# chaotic

./: .gitignore  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  chaotic.sln
chaotic/: chaotic.vcxproj  chaotic.vcxproj.filters
chaotic/backend_d3d11/: CMakeLists.txt
chaotic/backend_d3d11/include/: chaotic_d3d11.h
chaotic/backend_metal/: CMakeLists.txt
chaotic/backend_metal/include/: chaotic_metal.h
chaotic/backend_metal/source/: MetalBackend.mm  MetalDemo.cpp
chaotic/chaotic_headers/: chaotic.h  chaotic_customs.h  chaotic_defaults.h  chaotic_internals.h
chaotic/core/: CMakeLists.txt
chaotic/core/include/: chaotic_core.h
chaotic/core/include/chaotic/render/: CurveGeometry.h  Renderer.h  ScatterGeometry.h  Scene.h
chaotic/include/: Bindable.h  Drawable.h  Graphics.h  Header.h  Keyboard.h  Mouse.h  Timer.h  WinHeader.h  Window.h  embedded_resources.h  iGManager.h
chaotic/include/Bindable/: BindableBase.h  Blender.h  ConstantBuffer.h  DepthStencil.h  IndexBuffer.h  InputLayout.h  PixelShader.h  Rasterizer.h  Sampler.h  Texture.h  Topology.h  VertexBuffer.h  VertexShader.h
chaotic/include/Drawable/: Background.h  Curve.h  Light.h  Polihedron.h  Polyhedron.h  Scatter.h  Surface.h
chaotic/include/Error/: ChaoticError.h  DxgiInfoManager.h  _erDefault.h  _erGraphics.h  _erWindow.h
chaotic/include/Exception/: DxgiInfoManager.h  Exception.h  _exDefault.h  _exGraphics.h  _exWindow.h
chaotic/include/Image/: Color.h  Image.h
chaotic/include/Math/: Matrix.h  Quaternion.h  Vectors.h  constants.h
chaotic/include/imgui/: imgui.h
chaotic/shaders/: BackgroundPS.hlsl  BackgroundVS.hlsl  ColorCurveVS.hlsl  CubeTexturePS.hlsl  CurveVS.hlsl  DynamicBgPS.hlsl  DynamicBgVS.hlsl  GlobalColorPS.hlsl  GlobalColorVS.hlsl  LightPS.hlsl  LightVS.hlsl  OITCubeTexturePS.hlsl  OITGlobalColorPS.hlsl  OITUnlitCubeTexturePS.hlsl  OITUnlitGlobalColorPS.hlsl  OITUnlitVertexColorPS.hlsl  OITUnlitVertexTexturePS.hlsl  OITVertexColorPS.hlsl  OITVertexTexturePS.hlsl  OITheader.hlsli  OITresolvePS.hlsl  OITresolveVS.hlsl  Perspective.hlsli  Quaternion.hlsli  UnlitCubeTexturePS.hlsl  UnlitGlobalColorPS.hlsl  UnlitVertexColorPS.hlsl  UnlitVertexTexturePS.hlsl  VertexColorPS.hlsl  VertexColorVS.hlsl  VertexTexturePS.hlsl  VertexTextureVS.hlsl
chaotic/source/: Drawable.cpp  Graphics.cpp  Keyboard.cpp  Mouse.cpp  Timer.cpp  Window.cpp  chaotic_demo.cpp  embedded_generation.cpp  embedded_resources.cpp  iGManager.cpp
chaotic/source/Bindable/: Blender.cpp  ConstantBuffer.cpp  DepthStencil.cpp  IndexBuffer.cpp  InputLayout.cpp  PixelShader.cpp  Rasterizer.cpp  Sampler.cpp  Texture.cpp  Topology.cpp  VertexBuffer.cpp  VertexShader.cpp
chaotic/source/Drawable/: Background.cpp  Curve.cpp  Light.cpp  Polihedron.cpp  Polyhedron.cpp  Scatter.cpp  Surface.cpp
chaotic/source/Error/: ChaoticError.cpp  DxgiInfoManager.cpp  ImGuiError.cpp
chaotic/source/Exception/: DxgiInfoManager.cpp  Exception.cpp
chaotic/source/Image/: Image.cpp
chaotic/source/Math/: Quaternion.cpp  Vectors.cpp
docs/: PORTING.md
imgui/: imgui.vcxproj  imgui.vcxproj.filters
imgui/include/: imgui.h
